<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/connection_page" android:background="@color/eggshell_white" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nthlink_logo_blue_2" android:scaleType="centerCrop" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.4" />
        <TextView android:textSize="30.0dip" android:textStyle="bold" android:textColor="@color/black" android:id="@id/logo_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_20_dp" android:text="@string/app_name" android:fontFamily="@font/work_sans_normal" app:layout_constraintEnd_toEndOf="@id/logo" app:layout_constraintStart_toStartOf="@id/logo" app:layout_constraintTop_toBottomOf="@id/logo" />
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/distance_18_dp" android:textStyle="bold" android:textColor="@color/neon_blue" android:id="@id/toggle" android:padding="@dimen/distance_16_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/distance_48_dp" android:text="@string/connection_label_connect" android:fontFamily="@font/work_sans_normal" android:layout_marginStart="@dimen/distance_36_dp" android:layout_marginEnd="@dimen/distance_36_dp" app:cornerRadius="@dimen/distance_12_dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logo_title" app:strokeColor="@color/neon_blue" app:strokeWidth="@dimen/distance_3_dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <TextView android:textSize="@dimen/font_16_sp" android:textColor="@color/white" android:gravity="center" android:id="@id/visit_landing_page_bottom" android:paddingTop="@dimen/distance_16_dp" android:paddingBottom="@dimen/distance_16_dp" android:visibility="gone" android:layout_width="@dimen/match_constraint" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/distance_52_dp" android:text="@string/temp_visit_our_landing_page" android:layout_marginStart="@dimen/distance_20_dp" android:layout_marginEnd="@dimen/distance_20_dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/toggle" app:layout_constraintStart_toStartOf="@id/toggle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include android:id="@id/news_bottom_sheet" layout="@layout/bottom_sheet_news" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>